trunk/6380956/antlr-generated/edu/uva/sc/oberon0/oberon0Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g 2011-02-28 01:40:56

  package edu.uva.sc.oberon0;
  import edu.uva.sc.oberon0.Evaluators.*;
  import edu.uva.sc.oberon0.Evaluators.Boolean.*;
  import edu.uva.sc.oberon0.Evaluators.Numerical.*;
  import edu.uva.sc.oberon0.Evaluators.Structural.*;
  import edu.uva.sc.oberon0.Evaluators.Conditional.*;
  import edu.uva.sc.oberon0.Evaluators.Selectors.*;
  import edu.uva.sc.oberon0.Evaluators.Types.*;
  import java.util.List;
  import java.util.LinkedList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class oberon0Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INTEGER", "IDENT", "WS", "'('", "')'", "'~'", "'*'", "'DIV'", "'MOD'", "'&'", "'+'", "'-'", "'OR'", "'='", "'#'", "'<'", "'<='", "'>'", "'>='", "'['", "']'", "'.'", "':='", "','", "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", "'END'", "'WHILE'", "'DO'", "';'", "'ARRAY'", "'OF'", "':'", "'RECORD'", "'VAR'", "'PROCEDURE'", "'BEGIN'", "'CONST'", "'TYPE'", "'MODULE'"
    };
    public static final int EOF=-1;
    public static final int T__7=7;
    public static final int T__8=8;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int INTEGER=4;
    public static final int IDENT=5;
    public static final int WS=6;

    // delegates
    // delegators


        public oberon0Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public oberon0Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return oberon0Parser.tokenNames; }
    public String getGrammarFileName() { return "F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g"; }



    // $ANTLR start "factor"
    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:30:1: factor returns [IEvaluator e] : ( IDENT s= selector | INTEGER | '(' exp= expression ')' | '~' factor );
    public final IEvaluator factor() throws RecognitionException {
        IEvaluator e = null;

        Token IDENT1=null;
        Token INTEGER2=null;
        ISelector s = null;

        IEvaluator exp = null;


        try {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:31:3: ( IDENT s= selector | INTEGER | '(' exp= expression ')' | '~' factor )
            int alt1=4;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                alt1=1;
                }
                break;
            case INTEGER:
                {
                alt1=2;
                }
                break;
            case 7:
                {
                alt1=3;
                }
                break;
            case 9:
                {
                alt1=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:31:5: IDENT s= selector
                    {
                    IDENT1=(Token)match(input,IDENT,FOLLOW_IDENT_in_factor127); 
                    pushFollow(FOLLOW_selector_in_factor131);
                    s=selector();

                    state._fsp--;

                    e = new VariableRef((IDENT1!=null?IDENT1.getText():null), s);

                    }
                    break;
                case 2 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:33:5: INTEGER
                    {
                    INTEGER2=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_factor142); 
                    e =new Integ(INTEGER2);

                    }
                    break;
                case 3 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:34:5: '(' exp= expression ')'
                    {
                    match(input,7,FOLLOW_7_in_factor151); 
                    pushFollow(FOLLOW_expression_in_factor155);
                    exp=expression();

                    state._fsp--;

                    match(input,8,FOLLOW_8_in_factor157); 
                    e =exp;

                    }
                    break;
                case 4 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:35:5: '~' factor
                    {
                    match(input,9,FOLLOW_9_in_factor166); 
                    pushFollow(FOLLOW_factor_in_factor168);
                    factor();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return e;
    }
    // $ANTLR end "factor"


    // $ANTLR start "term"
    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:36:1: term returns [IEvaluator e] : arg1= factor ( '*' arg2= factor | 'DIV' arg2= factor | 'MOD' arg2= factor | '&' arg2= factor )* ;
    public final IEvaluator term() throws RecognitionException {
        IEvaluator e = null;

        IEvaluator arg1 = null;

        IEvaluator arg2 = null;


        try {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:37:3: (arg1= factor ( '*' arg2= factor | 'DIV' arg2= factor | 'MOD' arg2= factor | '&' arg2= factor )* )
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:38:5: arg1= factor ( '*' arg2= factor | 'DIV' arg2= factor | 'MOD' arg2= factor | '&' arg2= factor )*
            {
            pushFollow(FOLLOW_factor_in_term189);
            arg1=factor();

            state._fsp--;

            e =arg1;
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:39:5: ( '*' arg2= factor | 'DIV' arg2= factor | 'MOD' arg2= factor | '&' arg2= factor )*
            loop2:
            do {
                int alt2=5;
                switch ( input.LA(1) ) {
                case 10:
                    {
                    alt2=1;
                    }
                    break;
                case 11:
                    {
                    alt2=2;
                    }
                    break;
                case 12:
                    {
                    alt2=3;
                    }
                    break;
                case 13:
                    {
                    alt2=4;
                    }
                    break;

                }

                switch (alt2) {
            	case 1 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:40:6: '*' arg2= factor
            	    {
            	    match(input,10,FOLLOW_10_in_term204); 
            	    pushFollow(FOLLOW_factor_in_term208);
            	    arg2=factor();

            	    state._fsp--;

            	    e =new Mult(arg1, arg2);

            	    }
            	    break;
            	case 2 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:41:8: 'DIV' arg2= factor
            	    {
            	    match(input,11,FOLLOW_11_in_term220); 
            	    pushFollow(FOLLOW_factor_in_term224);
            	    arg2=factor();

            	    state._fsp--;

            	    e =new Div(arg1, arg2);

            	    }
            	    break;
            	case 3 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:42:8: 'MOD' arg2= factor
            	    {
            	    match(input,12,FOLLOW_12_in_term236); 
            	    pushFollow(FOLLOW_factor_in_term240);
            	    arg2=factor();

            	    state._fsp--;

            	    e =new Mod(arg1, arg2);

            	    }
            	    break;
            	case 4 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:43:8: '&' arg2= factor
            	    {
            	    match(input,13,FOLLOW_13_in_term252); 
            	    pushFollow(FOLLOW_factor_in_term256);
            	    arg2=factor();

            	    state._fsp--;

            	    e =new And(arg1, arg2);

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return e;
    }
    // $ANTLR end "term"


    // $ANTLR start "simpleExpression"
    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:45:1: simpleExpression returns [IEvaluator e] : ( '+' | '-' )? arg1= term ( '+' arg2= term | '-' arg2= term | 'OR' arg2= term )* ;
    public final IEvaluator simpleExpression() throws RecognitionException {
        IEvaluator e = null;

        IEvaluator arg1 = null;

        IEvaluator arg2 = null;


        try {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:46:3: ( ( '+' | '-' )? arg1= term ( '+' arg2= term | '-' arg2= term | 'OR' arg2= term )* )
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:46:5: ( '+' | '-' )? arg1= term ( '+' arg2= term | '-' arg2= term | 'OR' arg2= term )*
            {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:46:5: ( '+' | '-' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=14 && LA3_0<=15)) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:
                    {
                    if ( (input.LA(1)>=14 && input.LA(1)<=15) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    }
                    break;

            }

            pushFollow(FOLLOW_term_in_simpleExpression315);
            arg1=term();

            state._fsp--;

            e =arg1;
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:51:6: ( '+' arg2= term | '-' arg2= term | 'OR' arg2= term )*
            loop4:
            do {
                int alt4=4;
                switch ( input.LA(1) ) {
                case 14:
                    {
                    alt4=1;
                    }
                    break;
                case 15:
                    {
                    alt4=2;
                    }
                    break;
                case 16:
                    {
                    alt4=3;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:51:7: '+' arg2= term
            	    {
            	    match(input,14,FOLLOW_14_in_simpleExpression325); 
            	    pushFollow(FOLLOW_term_in_simpleExpression329);
            	    arg2=term();

            	    state._fsp--;

            	    e =new Add(arg1, arg2);

            	    }
            	    break;
            	case 2 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:52:7: '-' arg2= term
            	    {
            	    match(input,15,FOLLOW_15_in_simpleExpression340); 
            	    pushFollow(FOLLOW_term_in_simpleExpression344);
            	    arg2=term();

            	    state._fsp--;

            	    e =new Min(arg1, arg2);

            	    }
            	    break;
            	case 3 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:53:7: 'OR' arg2= term
            	    {
            	    match(input,16,FOLLOW_16_in_simpleExpression355); 
            	    pushFollow(FOLLOW_term_in_simpleExpression359);
            	    arg2=term();

            	    state._fsp--;

            	    e =new Or(arg1, arg2);

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return e;
    }
    // $ANTLR end "simpleExpression"


    // $ANTLR start "expression"
    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:55:1: expression returns [IEvaluator e] : arg1= simpleExpression ( '=' arg2= simpleExpression | '#' arg2= simpleExpression | '<' arg2= simpleExpression | '<=' arg2= simpleExpression | '>' arg2= simpleExpression | '>=' arg2= simpleExpression )? ;
    public final IEvaluator expression() throws RecognitionException {
        IEvaluator e = null;

        IEvaluator arg1 = null;

        IEvaluator arg2 = null;


        try {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:56:3: (arg1= simpleExpression ( '=' arg2= simpleExpression | '#' arg2= simpleExpression | '<' arg2= simpleExpression | '<=' arg2= simpleExpression | '>' arg2= simpleExpression | '>=' arg2= simpleExpression )? )
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:56:5: arg1= simpleExpression ( '=' arg2= simpleExpression | '#' arg2= simpleExpression | '<' arg2= simpleExpression | '<=' arg2= simpleExpression | '>' arg2= simpleExpression | '>=' arg2= simpleExpression )?
            {
            pushFollow(FOLLOW_simpleExpression_in_expression386);
            arg1=simpleExpression();

            state._fsp--;

            e =arg1;
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:57:5: ( '=' arg2= simpleExpression | '#' arg2= simpleExpression | '<' arg2= simpleExpression | '<=' arg2= simpleExpression | '>' arg2= simpleExpression | '>=' arg2= simpleExpression )?
            int alt5=7;
            switch ( input.LA(1) ) {
                case 17:
                    {
                    alt5=1;
                    }
                    break;
                case 18:
                    {
                    alt5=2;
                    }
                    break;
                case 19:
                    {
                    alt5=3;
                    }
                    break;
                case 20:
                    {
                    alt5=4;
                    }
                    break;
                case 21:
                    {
                    alt5=5;
                    }
                    break;
                case 22:
                    {
                    alt5=6;
                    }
                    break;
            }

            switch (alt5) {
                case 1 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:58:7: '=' arg2= simpleExpression
                    {
                    match(input,17,FOLLOW_17_in_expression403); 
                    pushFollow(FOLLOW_simpleExpression_in_expression407);
                    arg2=simpleExpression();

                    state._fsp--;

                    e =new Equal(arg1, arg2);

                    }
                    break;
                case 2 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:59:8: '#' arg2= simpleExpression
                    {
                    match(input,18,FOLLOW_18_in_expression419); 
                    pushFollow(FOLLOW_simpleExpression_in_expression423);
                    arg2=simpleExpression();

                    state._fsp--;

                    e =new NotEqual(arg1, arg2);

                    }
                    break;
                case 3 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:60:8: '<' arg2= simpleExpression
                    {
                    match(input,19,FOLLOW_19_in_expression434); 
                    pushFollow(FOLLOW_simpleExpression_in_expression438);
                    arg2=simpleExpression();

                    state._fsp--;

                    e =new Smaller(arg1, arg2);

                    }
                    break;
                case 4 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:61:8: '<=' arg2= simpleExpression
                    {
                    match(input,20,FOLLOW_20_in_expression449); 
                    pushFollow(FOLLOW_simpleExpression_in_expression453);
                    arg2=simpleExpression();

                    state._fsp--;

                    e =new SmallerOrEqual(arg1, arg2);

                    }
                    break;
                case 5 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:62:8: '>' arg2= simpleExpression
                    {
                    match(input,21,FOLLOW_21_in_expression464); 
                    pushFollow(FOLLOW_simpleExpression_in_expression468);
                    arg2=simpleExpression();

                    state._fsp--;

                    e =new Bigger(arg1, arg2);

                    }
                    break;
                case 6 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:63:8: '>=' arg2= simpleExpression
                    {
                    match(input,22,FOLLOW_22_in_expression479); 
                    pushFollow(FOLLOW_simpleExpression_in_expression483);
                    arg2=simpleExpression();

                    state._fsp--;

                    e =new BiggerOrEqual(arg1, arg2);

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return e;
    }
    // $ANTLR end "expression"


    // $ANTLR start "selector"
    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:66:1: selector returns [ISelector s] : ( '[' exp= expression ']' | '.' IDENT )* ;
    public final ISelector selector() throws RecognitionException {
        ISelector s = null;

        Token IDENT3=null;
        IEvaluator exp = null;


        try {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:67:3: ( ( '[' exp= expression ']' | '.' IDENT )* )
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:67:5: ( '[' exp= expression ']' | '.' IDENT )*
            {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:67:5: ( '[' exp= expression ']' | '.' IDENT )*
            loop6:
            do {
                int alt6=3;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==23) ) {
                    alt6=1;
                }
                else if ( (LA6_0==25) ) {
                    alt6=2;
                }


                switch (alt6) {
            	case 1 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:68:5: '[' exp= expression ']'
            	    {
            	    match(input,23,FOLLOW_23_in_selector518); 
            	    pushFollow(FOLLOW_expression_in_selector522);
            	    exp=expression();

            	    state._fsp--;

            	    match(input,24,FOLLOW_24_in_selector524); 
            	    s =new ArraySelector(exp);

            	    }
            	    break;
            	case 2 :
            	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:69:7: '.' IDENT
            	    {
            	    match(input,25,FOLLOW_25_in_selector534); 
            	    IDENT3=(Token)match(input,IDENT,FOLLOW_IDENT_in_selector536); 
            	    s =new ObjectSelector(IDENT3);

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return s;
    }
    // $ANTLR end "selector"


    // $ANTLR start "assignment"
    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:72:1: assignment returns [Assignment a] : IDENT sel= selector ':=' exp= expression ;
    public final Assignment assignment() throws RecognitionException {
        Assignment a = null;

        Token IDENT4=null;
        ISelector sel = null;

        IEvaluator exp = null;


        try {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:73:3: ( IDENT sel= selector ':=' exp= expression )
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:73:5: IDENT sel= selector ':=' exp= expression
            {
            IDENT4=(Token)match(input,IDENT,FOLLOW_IDENT_in_assignment560); 
            pushFollow(FOLLOW_selector_in_assignment564);
            sel=selector();

            state._fsp--;

            match(input,26,FOLLOW_26_in_assignment566); 
            pushFollow(FOLLOW_expression_in_assignment570);
            exp=expression();

            state._fsp--;

            a = new Assignment((IDENT4!=null?IDENT4.getText():null), sel, exp);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return a;
    }
    // $ANTLR end "assignment"


    // $ANTLR start "actualParameters"
    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:77:1: actualParameters returns [List<IEvaluator> lp] : '(' (exp1= expression ( ',' exp2= expression )* )? ')' ;
    public final List<IEvaluator> actualParameters() throws RecognitionException {
        List<IEvaluator> lp = null;

        IEvaluator exp1 = null;

        IEvaluator exp2 = null;


        try {
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:77:48: ( '(' (exp1= expression ( ',' exp2= expression )* )? ')' )
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:78:1: '(' (exp1= expression ( ',' exp2= expression )* )? ')'
            {
            List<IEvaluator> paramsList = new LinkedList<IEvaluator>();
            match(input,7,FOLLOW_7_in_actualParameters593); 
            // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:79:5: (exp1= expression ( ',' exp2= expression )* )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( ((LA8_0>=INTEGER && LA8_0<=IDENT)||LA8_0==7||LA8_0==9||(LA8_0>=14 && LA8_0<=15)) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:80:2: exp1= expression ( ',' exp2= expression )*
                    {
                    pushFollow(FOLLOW_expression_in_actualParameters600);
                    exp1=expression();

                    state._fsp--;

                    paramsList.add(exp1);
                    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:81:2: ( ',' exp2= expression )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==27) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:81:3: ',' exp2= expression
                    	    {
                    	    match(input,27,FOLLOW_27_in_actualParameters606); 
                    	    pushFollow(FOLLOW_expression_in_actualParameters610);
                    	    exp2=expression();

                    	    state._fsp--;

                    	    paramsList.add(exp2);

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,8,FOLLOW_8_in_actualParameters620); 
            lp = paramsList;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return lp;
    }
    // $ANTLR end "actualParameters"


    // $ANTLR start "procedureCall"
    // F:\\docs\\master\\SoftwareConstruction\\oberon0\\src\\edu\\uva\\sc\\oberon0\\oberon0.g:86:1: procedureCall returns [ProcedureCall pc] : IDENT (ap= actualParameters )? ;
    public final ProcedureCall procedureCall() throws RecognitionException {
